--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Estudiante/_TemporalPagos.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Estudiante/_TemporalPagos.cshtml
@@ -6,12 +6,13 @@
     @Html.Grid(Model).Columns(columns =>
     {
         columns.Add(c => c.C_CodAlu).Titled("Codigo").Filterable(true);
-        columns.Add(c => c.C_RcCod).Titled("Cod Carrera").Filterable(true);
+        columns.Add(c => c.C_RcCod).Titled("Cod RC").Filterable(true);
         columns.Add(c => c.T_NomCompleto).Titled("Nombre Completo").Filterable(true);
-        columns.Add(c => c.C_NumDNI).Titled("Num. Documento").Filterable(true);
+        columns.Add(c => c.C_NumDNI).Titled("Num. Doc.").Filterable(true);
         columns.Add(c => c.C_CodTipDo).Css("text-center").Titled("Tipo Doc.").Filterable(true);
         columns.Add(c => c.C_Sexo).Css("text-center").Titled("Sexo").Filterable(true);
-        columns.Add(c => c.C_CodModIn).Css("text-center").Titled("Cod. Ingreso").Filterable(true);
+        columns.Add(c => c.D_FecNac).Css("text-center").Titled("Fec. Nac").Filterable(true);
+        columns.Add(c => c.C_CodModIn).Css("text-center").Titled("Mod. Ingreso").Filterable(true);
         columns.Add(c => c.C_AnioIngr).Css("text-center").Titled("Año Ingreso").Filterable(true);
     }
     ).WithPaging(20).Sortable(true).WithGridItemsCount("Registros encontrados").EmptyText("No se encontraron registros")
