--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_ResultadoCopiarRegistros.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_ResultadoCopiarRegistros.cshtml
@@ -3,5 +3,5 @@
 
 <div class="card-body">
     <h5 class="card-title">Resultado:</h5>
-    <p class="card-text alert alert-@Model.Color">@Html.Raw(Model.Message)</p>
+    <div class="card-text alert alert-@Model.Color">@Html.Raw(Model.Message)</div>
 </div>
