--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/Pregrado.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/Pregrado.cshtml
@@ -4,7 +4,7 @@
     string action = ViewBag.Action;
     string controller = ViewBag.Controller;
     var procedencia_value = WebMigradorCtasPorCobrar.Models.Helpers.Procedencia.Pregrado;
- }
+}
 
 <div class="py-3">
     <h1>Pregrado <small>CUOTAS DE PAGO</small></h1>
@@ -13,10 +13,9 @@
     <div class="col-md-2">
         <fieldset>
             <legend class="pb-3 font-weight-bold">OPCIONES</legend>
-                <a class="btn btn-outline-dark btn-block my-3" id="btn-tp" href="@Url.Action("Pregrado", "CuotaPago", new { partial = "TemporalPagos" })">Temporal de pagos</a>
-                <a class="btn btn-outline-dark btn-block my-3" id="btn-mg" href="@Url.Action("Pregrado", "CuotaPago", new { partial = "DatosMigracion" })">Registros para migración</a>
-                <a class="btn btn-outline-dark btn-block my-3" id="btn-proc" href="@Url.Action("Pregrado", "CuotaPago", new { partial = "ProcesoMigracion" })">
-            Proceso de migración</a>
+            <a class="btn btn-outline-dark btn-block my-3" id="btn-proc" href="@Url.Action("Pregrado", "CuotaPago", new { partial = "ProcesoMigracion" })">Proceso de migración</a>
+            <a class="btn btn-outline-dark btn-block my-3" id="btn-tp" href="@Url.Action("Pregrado", "CuotaPago", new { partial = "TemporalPagos" })">Temporal de pagos</a>
+            <a class="btn btn-outline-dark btn-block my-3" id="btn-mg" href="@Url.Action("Pregrado", "CuotaPago", new { partial = "DatosMigracion" })">Registros para migración</a>
         </fieldset>
     </div>
     <div class="col-md-10">
