--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Estudiante/_DatosEstudiante.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Estudiante/_DatosEstudiante.cshtml
@@ -19,7 +19,7 @@
 
         <dt class="col-sm-4">Año de ingreso</dt>
         <dd class="col-sm-8">@Model.C_AnioIngreso</dd>
-        
+
         <dt class="col-sm-4">Nombre Completo</dt>
         <dd class="col-sm-8">@Model.T_ApePaterno  @Model.T_ApeMaterno,  @Model.T_Nombre</dd>
 
@@ -28,6 +28,9 @@
 
         <dt class="col-sm-4">Tipo Documento</dt>
         <dd class="col-sm-8">@Model.C_CodTipDoc</dd>
+
+        <dt class="col-sm-4">Sexo</dt>
+        <dd class="col-sm-8">@Model.C_Sexo</dd>
 
         <dt class="col-sm-4">Fecha de Nacimiento</dt>
         <dd class="col-sm-8">
