--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Estudiante/_DatosMigracion.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Estudiante/_DatosMigracion.cshtml
@@ -6,9 +6,16 @@
     <div class="col-md-2 col-sm-3">
         <label class="control-label">Filtro observación</label>
     </div>
-    <div class="col-md-4">
+    <div class="">
         @Html.DropDownList("cboTipoObs", ViewBag.Observaciones as SelectList, "- SIN FILTRO -", new { @class = "form-control" })
     </div>
+
+    <div class="col-md-2 col-sm-3">
+        <a href="@Url.Action("ExportarObservaciones", "Estudiante", new { id = ViewBag.IdObservacion, procedencia = ViewBag.Procedencia })">
+            <i class="fa fa-file-excel-o"></i> Exportar Observaciones
+        </a>
+    </div>
+
 </div>
 
 <div class="table-responsive" style="min-height:300px">
